{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Player",
            "id": "8838b189-6a88-4c6a-a7ec-af36ad5d9a3f",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Value",
                    "id": "70547a4f-672d-4c5c-beb4-60ecc1c5d32f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "acaa278f-adf5-44a7-a066-474261726d57",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e7f89181-6096-459b-b056-8ed3796042bc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "5c354833-709a-4a64-b033-362a9e17e808",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Combat",
                    "type": "Button",
                    "id": "22431613-0f0f-4a70-9f7f-08732351471d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WallGrab",
                    "type": "Button",
                    "id": "59ff6f15-8740-4de9-8a19-a69b58690d8b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChipThrow",
                    "type": "Button",
                    "id": "2b50a0ef-f1f0-42c5-b10c-d9cfaf3929f2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WasdLeftRight",
                    "id": "fa718c7a-8a7d-4ad6-a851-11da2bc71914",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "ee9fd726-a16a-4640-b63b-b91318b7bb1a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "38c906ec-9ec8-4d5f-8367-b0d7b684c2db",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ControllerLeftRight",
                    "id": "7a211de2-8f6a-4a44-b1f0-0729c845b5b6",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d773d57b-e320-4677-a9e4-a6f14a3b27ee",
                    "path": "<Joystick>/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "dfa9efb1-650e-43df-82a4-cc5db8e59b04",
                    "path": "<Joystick>/stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WasdUpDown",
                    "id": "364a6627-cdeb-4ec6-8bf7-e578d0b54454",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "f12aa3b2-374a-4a93-a6eb-019ef11dc590",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "1d615c27-6d6b-4095-a7b0-b10ff13152bb",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ControllerUpDown",
                    "id": "028e0464-41ea-4cec-923e-867743a58108",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "513ce0f4-ce9a-4d7a-b13a-3160da3d3092",
                    "path": "<Joystick>/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "3b0ccb96-be5d-463f-81ed-123701111326",
                    "path": "<Joystick>/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "83e32cec-38f2-4fa7-ab4e-4ebefdfadba8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54f392e4-2a2f-4af0-ab20-865126db960b",
                    "path": "<HID::Microntek              USB Joystick          >/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03158fb7-3d12-4df7-ab1a-8592751e9f93",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3cc89885-7e4c-421b-b84c-388b5733960d",
                    "path": "<HID::Microntek              USB Joystick          >/button6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90b04767-53f7-43bb-95f9-a549acd686d5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Combat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c0e84b7-f46b-4ea3-87ee-df3006c795a7",
                    "path": "<HID::Microntek              USB Joystick          >/button4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Combat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5a51109-27d7-46dc-99c2-2f616f73299d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WallGrab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42b337c3-b81f-40af-91b3-88a792397933",
                    "path": "<HID::Microntek              USB Joystick          >/button5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WallGrab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13ebdd7a-d7b2-4762-9ec9-4c0a5634cadc",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChipThrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}